--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header h1 {
 }
 
 .banner {
-  background-color: #f1f8e9;
+  background-color: #7bd119;
   text-align: center;
   padding: 2rem 1rem;
 }
@@ -28,7 +28,7 @@ header h1 {
   background-color: #1fce53;
   padding: 2rem;
 }
-
+5t
 .galeria {
   background-color: #fce4ec;
   padding: 2rem;
