--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ img.imagem-exemplo {
 
 footer {
   background-color: #2e7d32;
-  color: white;
+  color: rgb(78, 194, 11);
   text-align: center;
   padding: 1rem;
   margin-top: 2rem;
